samples/_failures_safe/1761437171_1d0f4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f929b73f.c: In function ‘main’:
./samples/SAFE/__tmp_f929b73f.c:155:28: error: missing terminating " character
  155 |                     printf("Matrix multiplication successful:\
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f929b73f.c:155:21: error: expected expression at end of input
  155 |                     printf("Matrix multiplication successful:\
      |                     ^~~~~~
./samples/SAFE/__tmp_f929b73f.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f929b73f.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f929b73f.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f929b73f.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f929b73f.c:155:21: error: expected declaration or statement at end of input
